--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="description" content="Jerry Chen's website.">
+    <meta name="author" content="Jerry Chen">
+    <link rel="icon" href="./assets/images/favicon.ico">
 
-    <title>Jerry Chen's Webpage</title>
+    <title>Jerry Chen</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom CSS -->
     <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/scrolling-nav.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,25 +24,25 @@
     <![endif]-->
   </head>
 
-  <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <div class="navbar-header page-scroll">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Jerry Chen</a>
+          <a class="navbar-brand page-scroll" href="#page-top">Jerry Chen</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a class="page-scroll" href="#about">About</a></li>
+            <li><a class="page-scroll" href="#experience">Experience</a></li>
+            <li><a class="page-scroll" href="#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -63,8 +63,12 @@
     <!-- Hero -->
     <div id="hero">
       <div id="hero-cover"> </div>
-      <!-- Hero text -->
-      <div id="hero-container">
+    </div>
+
+    <!-- Begin page content -->
+    <!-- Hero text -->
+    <div id="hero-container">
+      <div class="hero-items">
         <div class="hero-box" id="name">
           Jerry Chen
         </div>
@@ -73,34 +77,45 @@
         </div>
       </div>
     </div>
-
-    <!-- Begin page content -->
-    <div class="container">
-      <div class="page-header" id="about">
-        <h1>About</h1>
-        <h4 style="min-height:800px">
-          My name is Jerry Chen, and I am a second year undergraduate
-          studying electrical engineering and computer science at the
-          University of California, Berkeley.
-        </h4>
-      </div>
-      <div id="experience">
-        <h1>Experience</h1>
-        I'm always looking for new skills to learn.
-        Most recently, I've picked up web design and created this website!
-        Here's what I can do.
+    <div class="background">
+      <div class="container">
+        <div id="about" class="article-section">
+          <h1>About</h1>
+          <h4>
+            My name is Jerry Chen, and I am a second year undergraduate
+            studying electrical engineering and computer science at the
+            University of California, Berkeley.
+          </h4>
+        </div>
+        <div id="experience" class="article-section">
+          <h1>Experience</h1>
+          <h4>
+            I'm always looking for new skills to learn.
+            Most recently, I've picked up web design and created this website!
+            Here's what I can do.
+          <h4>
           <h2>Classwork</h2>
           <h2>Projects</h2>
-      </div>
-      <div id="contact">
-        <h1>Contact</h1>
+        </div>
+        <div id="contact" class="article-section">
+          <h1>Contact</h1>
+          <h4>
+            The best way to reach me would be through
+            <a href="mailto:jerry.c@berkeley.edu">email</a>.
+            You can also find me on <a
+               href="https://www.linkedin.com/in/jerryjrchen">LinkedIn</a>
+            and <a href="https://www.github.com/cjerry">GitHub</a>.
+          </h4>
+          </h4>
+
+        </div>
       </div>
     </div>
-
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-        Website source available at <a href="">GitHub</a>.
+          Designed by Jerry Chen. Website source available on
+          <a href="https://github.com/cjerry/jerryjrchen">GitHub</a>.
         </p>
       </div>
     </footer>
@@ -114,5 +129,13 @@
     <script src="./assets/js/script.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- jQuery -->
+    <script src="./assets/js/jquery.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="./assets/js/jquery.easing.min.js"></script>
+    <script src="./assets/js/scrolling-nav.js"></script>
+
   </body>
 </html>
