--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
             <li><a class="page-scroll" href="#experience">Experience</a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                Links<span class="caret"></span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="glyphicon glyphicon-download-alt"/>
+                <span class="caret"/>
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="./assets/files/Jerry-Chen-Resume.pdf"><span class="glyphicon glyphicon-file"aria-hidden="true"/>Resume</a>
+                  <a href="./assets/files/Jerry-Chen-Resume.pdf">
+                    <span class="glyphicon glyphicon-file"aria-hidden="true"/> 
+                      Resume
+                  </a>
                 </li>
+                <li>
+                  <a href="./assets/files/VIMRC">
+                    <span class="glyphicon glyphicon-cog"aria-hidden="true"/>
+                    Vimrc
+                  </a>
               </ul>
             </li>
           </ul>
@@ -71,10 +81,23 @@
           Jerry Chen
         </div>
         <div class="hero-box" id="description">
-          Rising computer scientist obsessed with quality.
+          Rising <span class="emph">detail-obsessed</span> computer scientist.
+        </div>
+        <div id="social-links">
+          <a href="https://www.github.com/cjerry">
+            <img src="./assets/images/github.png" class="fade social">
+          </a>
+          <a href="https://www.linkedin.com/in/jerryjrchen">
+            <img src="./assets/images/linkedin.png" class="fade social">
+          </a>
+          <a href="mailto:jerry.c@berkeley.edu">
+            <span class="glyphicon glyphicon-envelope fade social-glyph"></span>
+          </a>
         </div>
       </div>
     </div>
+
+    <!-- Content -->
     <div class="background">
         <div id="about" class="article-section container">
           <h1>About</h1>
@@ -83,7 +106,14 @@
             electrical engineering and computer science at the
             University of California, Berkeley.
           </h3>
+          <h3>
+            In addition to coding and hacking together projects, I also enjoy
+            tutoring and mentoring other computer science students. This Fall,
+            I'll be helping out as a Senior Mentor as part of the
+            Computer Science Mentors group on campus.
+          </h3>
         </div>
+
         <div id="experience" class="article-section container">
           <div class="background-image"></div>
           <span class="blur-guard">
@@ -93,54 +123,97 @@
             Most recently, I've picked up web design and created this website!
             Here's what I can do.
           <h4>
-          <h2>Classwork</h2>
-          <span class="info-line">
-            <b>Computer Science:</b> Structure and Interpretation of Computer Programs,
-            Data Structures, Discrete Math.
-          </span>
-          <span class="info-line">
-            Other: Vector and Multivariable Calculus, Linear Algebra.
-          </span>
-          <h2>Project Showcase</h2>
+          <ul class="list-group col-md-6">
+            <li class="list-group-item active">Coursework</li>
+            <li class="list-group-item">Data Structures</li>
+            <li class="list-group-item">Machine Structures</li>
+            <li class="list-group-item">Efficient Algorithms and Intractable
+              Problems</li>
+            <li class="list-group-item">Discrete Mathematics</li>
+            <li class="list-group-item">Structure and Interpretation of Computer
+            Programs</li>
+            <li class="list-group-item">Vector and Multivariable Calculus</li>
+            <li class="list-group-item">Linear Algebra</li>
+          </ul>
+          <ul class="list-group col-md-6">
+            <li class="list-group-item active">Skills</li>
+            <li class="list-group-item">Python</li>
+            <li class="list-group-item">C/C++</li>
+            <li class="list-group-item">Java</li>
+            <li class="list-group-item">Scheme (functional language)</li>
+            <li class="list-group-item">HTML5/CSS3/Javascript</li>
+            <li class="list-group-item">SQLite</li>
+            <li class="list-group-item">Vim!</li>
+          </ul>
           <!-- Projects box -->
-          <div class="row">
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
-                  <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <h2>Selected Projects</h2>
+          <div id="proj-box">
+            <div class="row">
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  <img src="..." alt="...">
+                  <div class="caption">
+                    <h3>jerryjrchen</h3>
+                    <p>Personal portfolio website (that you are looking at).<p>
+                    <p><b>Current Version:</b> July 2015.</p>
+                    <p>
+                    <b>Tech:</b> HTML, CSS, JavaScript (JQuery library).
+                    Also built with Bootstrap.
+                    </p>
+                    <a href="https://github.com/cjerry/jerryjrchen" class="btn
+                      btn-primary" role="button">GitHub</a>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  <img src="./assets/images/gitlet.png" alt="...">
+                  <div class="caption">
+                    <h3>Gitlet</h3>
+                    <p>
+                    Miniature version of the version control system
+                    <a href="https://git-scm.com">"Git"</a>
+                    with core features intact, including commits, merging,
+                    rebasing, and remote server backup.
+                    </p>
+                    <p><b>Completed:</b> April 2015.</p>
+                    <p>
+                    <b>Tech:</b> Java, JUnit testing framework, Bash
+                    scripting.
+                    </p>
+                    <p>Source code for school projects cannot be publicly
+                    displayed. Please
+                    <a href="mailto:jerry.c@berkeley.edu">contact me</a>
+                    for more information.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  <img src="./assets/images/matrixmultithread.png" alt="...">
+                  <div class="caption">
+                    <h3>Matrix Multithread</h3>
+                    <p>
+                    My 2012 science fair project.
+                    Matrix multiplication optimization through
+                    multithreading.
+                    </p>
+                    <p>
+                    <p><b>Completed:</b> January 2012.</p>
+                    <p><b>Tech:</b> Java.</p>
+                    <a href="https://github.com/cjerry/MatrixMultiThread"
+                      class="btn btn-primary" role="button">GitHub</a>
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
-
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
-                  <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-6 col-md-4">
-              <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                  <h3>Thumbnail label</h3>
-                  <p>...</p>
-                  <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                </div>
-              </div>
-            </div>
-
-
           </div>
-          <span>
+          <span> <!--/blur-guard -->
         </div>
+
         <div id="contact" class="article-section container">
           <h1>Contact</h1>
           <h4>
@@ -150,14 +223,18 @@
                href="https://www.linkedin.com/in/jerryjrchen">LinkedIn</a>
             and <a href="https://www.github.com/cjerry">GitHub</a>.
           </h4>
+          <h4>
+            My resume is <a href="./assets/files/Jerry-Chen-Resume.pdf">
+              available here</a>.
           </h4>
         </div>
     </div>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-          Designed by Jerry Chen with lots of love from
+          Designed by Jerry Chen with love from
           <a href="http://getbootstrap.com">Bootstrap</a>.
           Website source available on
           <a href="https://github.com/cjerry/jerryjrchen">GitHub</a>.
