Preparing for new domain.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <b>Tech:</b> HTML, CSS, JavaScript (JQuery library).
                     Also built with Bootstrap.
                     </p>
-                    <a href="https://github.com/cjerry/jerryjrchen" class="btn
+                    <a href="https://github.com/cjerry/cjerry.github.io" class="btn
                       btn-primary" role="button">GitHub</a>
                   </div>
                 </div>
@@ -257,7 +257,7 @@
           Designed by Jerry Chen with love from
           <a href="http://getbootstrap.com">Bootstrap</a>.
           Website source available on
-          <a href="https://github.com/cjerry/jerryjrchen">GitHub</a>.
+          <a href="https://github.com/cjerry/cjerry.github.io">GitHub</a>.
         </p>
       </div>
     </footer>
