Brightened things up and made several small visual tweaks.

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
           <h1>About</h1>
           <h3>
             My name is Jerry Chen, and I am a undergraduate studying
-            electrical engineering and computer science at the
-            University of California, Berkeley.
+            <span class="emph">electrical engineering and computer science at
+            the University of California, Berkeley</span>.
           </h3>
           <h3>
-            In addition to coding and hacking together projects, I also enjoy
-            tutoring and mentoring other computer science students. This Fall,
-            I'll be helping out as a Senior Mentor as part of the
+            In addition to coding and hacking together various projects,
+            I also enjoy tutoring and mentoring other computer science students.
+            This Fall, I'll be helping out as a Senior Mentor as part of the
             Computer Science Mentors group on campus.
           </h3>
         </div>
@@ -123,34 +123,36 @@
             I'm always looking for new skills to learn.
             Most recently, I've picked up web design and created this website!
             Here's what I can do.
-          <h4>
+          </h4>
 
           <!-- Skill/Class tables -->
-          <ul class="list-group col-md-6">
-            <li class="list-group-item active">Coursework</li>
-            <li class="list-group-item">Data Structures</li>
-            <li class="list-group-item">Machine Structures</li>
-            <li class="list-group-item">Efficient Algorithms and Intractable
-              Problems</li>
-            <li class="list-group-item">Discrete Mathematics</li>
-            <li class="list-group-item">Structure and Interpretation of Computer
-            Programs</li>
-            <li class="list-group-item">Designing Information Devices and
-              Systems (EE)</li>
-            <li class="list-group-item">Vector and Multivariable Calculus</li>
-            <li class="list-group-item">Linear Algebra</li>
-          </ul>
-          <ul class="list-group col-md-6">
-            <li class="list-group-item active">Skills</li>
-            <li class="list-group-item">Python</li>
-            <li class="list-group-item">C/C++</li>
-            <li class="list-group-item">Java</li>
-            <li class="list-group-item">Scheme (functional language)</li>
-            <li class="list-group-item">HTML5/CSS3/Javascript</li>
-            <li class="list-group-item">Version Control (Git, Mercurial)</li>
-            <li class="list-group-item">SQLite</li>
-            <li class="list-group-item">Vim!</li>
-          </ul>
+          <div id="skills">
+            <ul class="list-group col-md-6">
+              <li class="list-group-item active" id="coursework">Coursework</li>
+              <li class="list-group-item">Data Structures</li>
+              <li class="list-group-item">Machine Structures</li>
+              <li class="list-group-item">Efficient Algorithms and Intractable
+                Problems</li>
+              <li class="list-group-item">Discrete Mathematics</li>
+              <li class="list-group-item">Structure and Interpretation of Computer
+              Programs</li>
+              <li class="list-group-item">Designing Information Devices and
+                Systems (EE)</li>
+              <li class="list-group-item">Vector and Multivariable Calculus</li>
+              <li class="list-group-item">Linear Algebra</li>
+            </ul>
+            <ul class="list-group col-md-6">
+              <li class="list-group-item active">Skills</li>
+              <li class="list-group-item">Python</li>
+              <li class="list-group-item">C/C++</li>
+              <li class="list-group-item">Java</li>
+              <li class="list-group-item">Scheme (functional language)</li>
+              <li class="list-group-item">HTML5/CSS3/Javascript</li>
+              <li class="list-group-item">Version Control (Git, Mercurial)</li>
+              <li class="list-group-item">SQLite</li>
+              <li class="list-group-item">Vim!</li>
+            </ul>
+          </div>
 
           <!-- Projects box -->
           <h2>Selected Projects</h2>
@@ -168,7 +170,7 @@
                     I faced many challenges in cobbling together this website,
                     but I learned tons about the hidden secrets of web design.
                     </p>
-                    <p><b>Current Version:</b> July 2015.</p>
+                    <p><b>Current Version:</b> August 2015.</p>
                     <p>
                     <b>Tech:</b> HTML, CSS, JavaScript (JQuery library).
                     Also built with Bootstrap.
@@ -254,8 +256,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-          Designed by Jerry Chen with love from
-          <a href="http://getbootstrap.com">Bootstrap</a>.
+          Designed by Jerry Chen.
           Website source available on
           <a href="https://github.com/cjerry/cjerry.github.io">GitHub</a>.
         </p>
