Tagline gone (for now). "Friendlier" about section.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <ul class="dropdown-menu">
                 <li>
                   <a href="https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0">
-                    <span class="glyphicon glyphicon-file"aria-hidden="true"/> 
+                    <span class="glyphicon glyphicon-file"aria-hidden="true"/>
                       Resume
                   </a>
                 </li>
@@ -81,7 +81,6 @@
           Jerry Chen
         </div>
         <div class="hero-box" id="description">
-          Rising <span class="emph">quality-driven</span> computer scientist.
         </div>
         <div id="social-links">
           <a href="https://www.github.com/cjerry">
@@ -101,17 +100,20 @@
     <!-- Begin page content -->
     <div class="content">
         <div id="about" class="article-section container">
-          <h1>About</h1>
+          <h1>Hello</h1>
           <h3>
             My name is Jerry Chen, and I am a undergraduate studying
-            <span class="emph">electrical engineering and computer science at
-            the University of California, Berkeley</span>.
+            electrical engineering and computer science at
+            the University of California, Berkeley.
           </h3>
           <h3>
             In addition to coding and hacking together various projects,
-            I also enjoy tutoring and mentoring other computer science students.
-            This Fall, I'll be helping out as a Senior Mentor as part of the
-            Computer Science Mentors group on campus.
+            I'm also passionate about tutoring and mentoring other students in
+            computer science.
+            This Fall, I'm a undergraduate student instructor for
+            <a href="http://cs61a.org"> CS61A </a>. I'm also a Senior Mentor in the
+            <a href="http://csmberkeley.github.io"> Computer Science Mentors </a>
+            group on campus.
           </h3>
         </div>
 
@@ -170,7 +172,7 @@
                     I faced many challenges in cobbling together this website,
                     but I learned tons about the hidden secrets of web design.
                     </p>
-                    <p><b>Current Version:</b> August 2015.</p>
+                    <p><b>Current Version:</b> September 2015.</p>
                     <p>
                     <b>Tech:</b> HTML, CSS, JavaScript (JQuery library).
                     Also built with Bootstrap.
