Pls no steal my work (copyright) and bigger text.

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
           <div class="background-image"></div>
           <span class="blur-guard">
           <h1>Experience</h1>
-          <h4>
+          <h3>
             I'm always looking for new skills to learn.
             Most recently, I've picked up web design and created this website!
             Here's what I can do.
-          </h4>
+          </h3>
 
           <!-- Skill/Class tables -->
           <div id="skills">
@@ -239,17 +239,17 @@
 
         <div id="contact" class="article-section container">
           <h1>Contact</h1>
-          <h4>
+          <h3>
             The best way to reach me would be through
             <a href="mailto:jerry.c@berkeley.edu">email</a>.
             You can also find me on <a
                href="https://www.linkedin.com/in/jerryjrchen">LinkedIn</a>
             and <a href="https://www.github.com/cjerry">GitHub</a>.
-          </h4>
-          <h4>
+          </h3>
+          <h3>
             My resume is <a href="https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0">
               available here</a>.
-          </h4>
+          </h3>
         </div>
     </div> <!--/.content-->
 
@@ -258,7 +258,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-          Designed by Jerry Chen.
+          Website and images © 2015 Jerry Chen.
           Website source available on
           <a href="https://github.com/cjerry/cjerry.github.io">GitHub</a>.
         </p>
