Updated activities for Spring 2015.

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
             In addition to coding and hacking together various projects,
             I'm also passionate about tutoring and mentoring other students in
             computer science.
-            This Fall, I'm a undergraduate student instructor for
-            <a href="http://cs61a.org"> CS61A </a>. I'm also a Senior Mentor in the
+            This Spring, I'm a undergraduate student instructor for
+            <a href="http://cs61a.org"> CS61A </a>. I'm also the 61A
+            course co-coordinator in the
             <a href="http://csmberkeley.github.io"> Computer Science Mentors </a>
             group on campus.
           </h3>
@@ -172,7 +173,7 @@
                     I faced many challenges in cobbling together this website,
                     but I learned tons about the hidden secrets of web design.
                     </p>
-                    <p><b>Current Version:</b> September 2015.</p>
+                    <p><b>Current Version:</b> December 2015.</p>
                     <p>
                     <b>Tech:</b> HTML, CSS, JavaScript (JQuery library).
                     Also built with Bootstrap.
