Adding updated coursework, obfuscated email.

--- a/index.html
+++ b/index.html
@@ -123,15 +123,25 @@
           <span class="blur-guard">
           <h1>Experience</h1>
           <h3>
-            I'm always looking for new skills to learn.
-            Most recently, I've picked up web design and created this website!
-            Here's what I can do.
+            I'm always looking for new skills to learn.  Most recently, I've
+            picked up web design and created this website!  Here's what I can
+            do. For more information, my resume is
+            <a href="https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0">
+              available here</a>.
           </h3>
 
           <!-- Skill/Class tables -->
           <div id="skills">
-            <ul class="list-group col-md-6">
-              <li class="list-group-item active" id="coursework">Coursework</li>
+            <ul class="list-group col-md-4">
+              <li class="list-group-item active" id="inprog">Coursework In
+                Progress</li>
+              <li class="list-group-item">Operating Systems</li>
+              <li class="list-group-item">Computer Security</li>
+              <li class="list-group-item">Designing Information Devices and
+                Systems II (EE)</li>
+            </ul>
+            <ul class="list-group col-md-4">
+              <li class="list-group-item active" id="coursework">Completed Coursework</li>
               <li class="list-group-item">Data Structures</li>
               <li class="list-group-item">Machine Structures</li>
               <li class="list-group-item">Efficient Algorithms and Intractable
@@ -140,11 +150,11 @@
               <li class="list-group-item">Structure and Interpretation of Computer
               Programs</li>
               <li class="list-group-item">Designing Information Devices and
-                Systems (EE)</li>
+                Systems I (EE)</li>
               <li class="list-group-item">Vector and Multivariable Calculus</li>
               <li class="list-group-item">Linear Algebra</li>
             </ul>
-            <ul class="list-group col-md-6">
+            <ul class="list-group col-md-4">
               <li class="list-group-item active">Skills</li>
               <li class="list-group-item">Python</li>
               <li class="list-group-item">C/C++</li>
@@ -242,7 +252,7 @@
           <h1>Contact</h1>
           <h3>
             The best way to reach me would be through
-            <a href="mailto:jerry.c@berkeley.edu">email</a>.
+            <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>&#101;&#109;&#97;&#105;&#108;</a>.
             You can also find me on <a
                href="https://www.linkedin.com/in/jerryjrchen">LinkedIn</a>
             and <a href="https://www.github.com/cjerry">GitHub</a>.
