--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jerry Chen's website.">
     <meta name="author" content="Jerry Chen">
-    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <title>Jerry Chen</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="./assets/css/scrolling-nav.css" rel="stylesheet"/>
+    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/scrolling-nav.css" rel="stylesheet"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -42,6 +42,7 @@
             <li><a class="page-scroll" href="#about">About</a></li>
             <li><a class="page-scroll" href="#experience">Experience</a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
+            <li><a class="page-scroll" href="/cs61a/">For CS 61A Students</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
@@ -58,7 +59,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="./assets/files/VIMRC">
+                  <a href="/assets/files/VIMRC">
                     <span class="glyphicon glyphicon-cog"aria-hidden="true"/>
                     Vimrc
                   </a>
@@ -84,10 +85,10 @@
         </div>
         <div id="social-links">
           <a href="https://www.github.com/cjerry">
-            <img src="./assets/images/github.png" class="fade social">
+            <img src="/assets/images/github.png" class="fade social">
           </a>
           <a href="https://www.linkedin.com/in/jerryjrchen">
-            <img src="./assets/images/linkedin.png" class="fade social">
+            <img src="/assets/images/linkedin.png" class="fade social">
           </a>
           <a href="mailto:jerry.c@berkeley.edu">
             <span class="glyphicon glyphicon-envelope fade social-glyph"></span>
@@ -174,7 +175,7 @@
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <div class="image-limit">
-                  <img src="./assets/images/jerryjrchen200.png" alt="..."/>
+                  <img src="/assets/images/jerryjrchen200.png" alt="..."/>
                   </div>
                   <div class="caption">
                     <h3>jerryjrchen</h3>
@@ -196,7 +197,7 @@
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <div class="image-limit">
-                  <img src="./assets/images/gitlet.png" alt="...">
+                  <img src="/assets/images/gitlet.png" alt="...">
                   </div>
                   <div class="caption">
                     <h3>Gitlet</h3>
@@ -222,7 +223,7 @@
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <div class="image-limit">
-                  <img src="./assets/images/matrixmultithread.png" alt="...">
+                  <img src="/assets/images/matrixmultithread.png" alt="...">
                   </div>
                   <div class="caption">
                     <h3>Matrix Multithread</h3>
@@ -281,13 +282,13 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/script.js"></script>
     <!-- jQuery -->
-    <script src="./assets/js/jquery.js"></script>
+    <script src="/assets/js/jquery.js"></script>
     <!-- Scrolling Nav JavaScript -->
-    <script src="./assets/js/jquery.easing.min.js"></script>
-    <script src="./assets/js/scrolling-nav.js"></script>
+    <script src="/assets/js/jquery.easing.min.js"></script>
+    <script src="/assets/js/scrolling-nav.js"></script>
 
     <!-- Googly Analytics -->
     <script>
