--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -53,7 +53,7 @@
       <div id="ta" class="article-section container">
         <h1>CS 61A Spring 2016</h1>
         <h3>Discussion check-in: <a href="http://tinyurl.com/jerrydisc">[http://tinyurl.com/jerrydisc]</a></h3>
-        <h3>Welcome to 61A! <a href="cs61a.org">[Course Webpage]</a></h3>
+        <h3>Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a></h3>
         <h3>TA: Jerry Chen <a
             href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a>.
           I teach at the following times/locations:</h3>
