--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -53,17 +53,21 @@
       <div id="ta" class="article-section container">
         <h1>CS 61A Spring 2016</h1>
         <h3>Discussion check-in: <a href="http://tinyurl.com/jerrydisc">[http://tinyurl.com/jerrydisc]</a></h3>
-        <h3>Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a></h3>
-        <h3>TA: Jerry Chen <a
+        <h3> TA: Jerry Chen <a
             href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a>.
-          I teach at the following times/locations:</h3>
-          <ul>
-            <li><h4>Lab 20: Tu 2:00-3:30pm, 273 Soda</h4></li>
-            <li><h4>Dis 120: Th 2:00-3:30pm, 250 Dwinelle</h4></li>
-          </ul>
-        <h3>Additional helpful information will be posted here as the semester
-          goes on.
-        </h3>
+          Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a> </h3>
+        <h3>Teaching Locations/Hours:</h3>
+        <ul>
+          <li>Office Hour: M 1:00-2:00pm, B4 Evans</li>
+          <li>Lab 20: Tu 2:00-3:30pm, 273 Soda</li>
+          <li>Dis 120: Th 2:00-3:30pm, 250 Dwinelle</li>
+        </ul>
+        <h3> Discussion Resources</h3>
+        <ul>
+          <li>Dis 0 - Intro & Lost on the Moon:
+            <a href="/assets/files/cs61a/disc0.pdf">[slides]</a>
+          </li>
+        </ul>
       </div>
     </div> <!--/.content-->
 
