Attempt to fix file linking errors.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -65,7 +65,7 @@
         <h3> Discussion Resources</h3>
         <ul>
           <li>Dis 0 - Intro & Lost on the Moon:
-            <a href="/assets/files/cs61a/disc0.pdf">[slides]</a>
+            <a href="/assets/files/disc0.pdf">[slides]</a>
           </li>
         </ul>
       </div>
