Moved stuff to nice tables!

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -56,18 +56,50 @@
         <h3> TA: Jerry Chen <a
             href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a>.
           Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a> </h3>
-        <h3>Teaching Locations/Hours:</h3>
-        <ul>
-          <li>Office Hour: M 1:00-2:00pm, B4 Evans</li>
-          <li>Lab 20: Tu 2:00-3:30pm, 273 Soda</li>
-          <li>Dis 120: Th 2:00-3:30pm, 250 Dwinelle</li>
-        </ul>
-        <h3> Discussion Resources</h3>
-        <ul>
-          <li>Dis 0 - Intro & Lost on the Moon:
-            <a href="/assets/files/disc0.pdf">[slides]</a>
-          </li>
-        </ul>
+        <h3 class="table-title">Teaching Locations/Hours</h3>
+        <table class="table table-sm">
+          <thead>
+            <tr>
+              <th>Type/Num</th>
+              <th>Time</th>
+              <th>Location</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Office Hour</td>
+              <td>M 1:00-2:00pm</td>
+              <td>B4 Evans</td>
+            </tr>
+            <tr>
+              <td>Lab 20</td>
+              <td>Tu 2:00-3:30pm</td>
+              <td>273 Soda</td>
+            </tr>
+            <tr>
+              <td>Dis 120</td>
+              <td>Th 2:00-3:30pm</td>
+              <td>250 Dwinelle</td>
+            </tr>
+          </tbody>
+        </table>
+        <h3 class="table-title"> Discussion Resources</h3>
+        <table class="table table-sm">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Description</th>
+              <th>Downloads</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>0</td>
+              <td>Intro & Lost on the Moon</td>
+              <td><a href="/assets/files/disc0.pdf">[slides]</a></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div> <!--/.content-->
 
