--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -52,15 +52,18 @@
     <div class="content">
       <div id="ta" class="article-section container">
         <h1>CS 61A Spring 2016</h1>
-        <h3>Discussion check-in: <a href="http://tinyurl.com/jerrydisc">[http://tinyurl.com/jerrydisc]</a></h3>
-        <h3> TA: Jerry Chen <a
-            href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a>.
-          Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a> </h3>
+        <h3>Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a></h3>
+        <div class="jumbotron">
+          <h2>TA: Jerry Chen <a
+              href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
+          <h2><a href="http://tinyurl.com/jerrydisc">[Discussion
+              check-in]</a></h2>
+        </div>
         <h3 class="table-title">Teaching Locations/Hours</h3>
         <table class="table table-sm">
           <thead>
             <tr>
-              <th>Type/Num</th>
+              <th>Type</th>
               <th>Time</th>
               <th>Location</th>
             </tr>
