Updating frontpage w/ font-awesome.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <!-- Custom CSS -->
     <link href="/assets/css/style.css" rel="stylesheet">
-    <link href="/assets/css/scrolling-nav.css" rel="stylesheet"/>
+    <link href="/assets/fonts/font-awesome/css/font-awesome.min.css"
+    rel="stylesheet">
+    <link href="/assets/css/scrolling-nav.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -48,20 +50,17 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                 role="button" aria-haspopup="true" aria-expanded="false">
-                <span class="glyphicon glyphicon-download-alt"/>
-                <span class="caret"/>
+                Downloads
+                <i class="fa fa-caret-down"></i>
               </a>
               <ul class="dropdown-menu">
                 <li>
                   <a href="https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0">
-                    <span class="glyphicon glyphicon-file"aria-hidden="true"/>
-                      Resume
-                  </a>
+                    <i class="fa fa-file-pdf-o"></i> Resume </a>
                 </li>
                 <li>
                   <a href="/assets/files/VIMRC">
-                    <span class="glyphicon glyphicon-cog"aria-hidden="true"/>
-                    Vimrc
+                    <i class="fa fa-cog"></i> vimrc </a>
                   </a>
               </ul>
             </li>
@@ -85,13 +84,13 @@
         </div>
         <div id="social-links">
           <a href="https://www.github.com/cjerry">
-            <img src="/assets/images/github.png" class="fade social">
+            <i class="fa fa-github fa-5x fade social-glyph"> </i>
           </a>
           <a href="https://www.linkedin.com/in/jerryjrchen">
-            <img src="/assets/images/linkedin.png" class="fade social">
+            <i class="fa fa-linkedin-square fa-5x fade social-glyph"> </i>
           </a>
           <a href="mailto:jerry.c@berkeley.edu">
-            <span class="glyphicon glyphicon-envelope fade social-glyph"></span>
+            <i class="fa fa-envelope fa-5x fade social-glyph"> </i>
           </a>
         </div>
       </div>
