--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -15,8 +15,8 @@
 
     <!-- Custom CSS -->
     <link href="/assets/css/style.css" rel="stylesheet">
-    <!-- No expando -->
-    <!-- <link href="/assets/css/scrolling-nav.css" rel="stylesheet"/> -->
+    <link href="/assets/fonts/font-awesome/css/font-awesome.min.css"
+    rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
