--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <a href="https://www.linkedin.com/in/jerryjrchen">
             <i class="fa fa-linkedin-square fa-5x fade social-glyph"> </i>
           </a>
-          <a href="mailto:jerry.c@berkeley.edu">
-            <i class="fa fa-envelope fa-5x fade social-glyph"> </i>
+          <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>
+            <i class="fa fa-envelope fa-5x fade social-glyph"></i>
           </a>
         </div>
       </div>
