Updated with disc01.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -101,6 +101,14 @@
               <td>Intro & Lost on the Moon</td>
               <td><a href="/assets/files/disc0.pdf">[slides]</a></td>
             </tr>
+            <tr>
+              <td>1</td>
+              <td>Control & Higher Order Functions</td>
+              <td>
+                <a href="/assets/files/disc1.pdf">[slides]</a>
+                <a href="/assets/files/hof.py">[code]</a>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
