Adding check-in reminder.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -56,8 +56,8 @@
         <div class="jumbotron">
           <h2>TA: Jerry Chen <a
               href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
-          <h2><a href="http://tinyurl.com/jerrydisc">[Discussion
-              check-in]</a></h2>
+          <h2><a href="http://tinyurl.com/jerrydisc">[Discussion check-in]</a></h2>
+          <h3>Remember to check-in by Sunday at midnight.<h3>
         </div>
         <h3 class="table-title">Teaching Locations/Hours</h3>
         <table class="table table-sm">
