Shuffled around class/id. Added some nice buttons.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -50,7 +50,7 @@
 
     <!-- Begin page content -->
     <div class="content">
-      <div id="ta" class="article-section container">
+      <div class="ta article-section container">
         <h1>CS 61A Spring 2016</h1>
         <h3>Welcome to 61A! <a href="http://cs61a.org">[Course Webpage]</a></h3>
         <div class="jumbotron">
@@ -99,14 +99,22 @@
             <tr>
               <td>0</td>
               <td>Intro & Lost on the Moon</td>
-              <td><a href="/assets/files/disc0.pdf">[slides]</a></td>
+              <td>
+                <button type="button" class="btn btn-primary">
+                  <a href="/assets/files/disc0.pdf">slides</a>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>1</td>
               <td>Control & Higher Order Functions</td>
               <td>
-                <a href="/assets/files/disc1.pdf">[slides]</a>
-                <a href="/assets/files/hof.py">[code]</a>
+                <button type="button" class="btn btn-primary">
+                  <a href="/assets/files/disc1.pdf">slides</a>
+                </button>
+                <button type="button" class="btn btn-success">
+                  <a href="/assets/files/hof.py">code</a>
+                </button>
               </td>
             </tr>
           </tbody>
