--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -51,73 +51,75 @@
     <!-- Begin page content -->
     <div class="content">
       <div class="ta article-section container">
-        <h1>CS 61A Spring 2016</h1>
-        <div class="jumbotron">
-          <h2>TA: Jerry Chen <a
-              href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
-          <h2><a href="http://tinyurl.com/jerrydisc">[Discussion check-in]</a></h2>
-          <h3>Remember to check-in by Sunday at midnight.<h3>
+        <div id="ta-section">
+          <h1>CS 61A Spring 2016</h1>
+          <div class="jumbotron">
+            <h2>TA: Jerry Chen <a
+                href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
+            <h2><a href="http://tinyurl.com/jerrydisc">[Discussion check-in]</a></h2>
+            <h3>Remember to check-in by Sunday at midnight.<h3>
+          </div>
+          <h3 class="table-title"> Discussion Resources</h3>
+          <table class="table table-sm">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Description</th>
+                <th>Downloads</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>0</td>
+                <td>Intro & Lost on the Moon</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc0.pdf">
+                    slides
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Control & Higher Order Functions</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc1.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-success" href="/assets/files/hof.py">
+                    code
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h3 class="table-title">Teaching Locations/Hours</h3>
+          <table class="table table-sm">
+            <thead>
+              <tr>
+                <th>Type</th>
+                <th>Time</th>
+                <th>Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Office Hour</td>
+                <td>M 1:00-2:00pm</td>
+                <td>B4 Evans</td>
+              </tr>
+              <tr>
+                <td>Lab 20</td>
+                <td>Tu 2:00-3:30pm</td>
+                <td>273 Soda</td>
+              </tr>
+              <tr>
+                <td>Dis 120</td>
+                <td>Th 2:00-3:30pm</td>
+                <td>250 Dwinelle</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <h3 class="table-title"> Discussion Resources</h3>
-        <table class="table table-sm">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Description</th>
-              <th>Downloads</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>0</td>
-              <td>Intro & Lost on the Moon</td>
-              <td>
-                <a class="btn btn-primary" href="/assets/files/disc0.pdf">
-                  slides
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>Control & Higher Order Functions</td>
-              <td>
-                <a class="btn btn-primary" href="/assets/files/disc1.pdf">
-                  slides
-                </a>
-                <a class="btn btn-success" href="/assets/files/hof.py">
-                  code
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <h3 class="table-title">Teaching Locations/Hours</h3>
-        <table class="table table-sm">
-          <thead>
-            <tr>
-              <th>Type</th>
-              <th>Time</th>
-              <th>Location</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Office Hour</td>
-              <td>M 1:00-2:00pm</td>
-              <td>B4 Evans</td>
-            </tr>
-            <tr>
-              <td>Lab 20</td>
-              <td>Tu 2:00-3:30pm</td>
-              <td>273 Soda</td>
-            </tr>
-            <tr>
-              <td>Dis 120</td>
-              <td>Th 2:00-3:30pm</td>
-              <td>250 Dwinelle</td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div> <!--/.content-->
 
