--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -88,6 +88,9 @@
                   <a class="btn btn-success" href="/assets/files/hof.py">
                     code
                   </a>
+                  <a class="btn btn-warning" href="/assets/files/quiz1.py">
+                    quiz
+                  </a>
                 </td>
               </tr>
             </tbody>
